src/test/ui/static/static-items-cant-move.stderr
error[E0507]: cannot move out of static item `BAR`
  --> $DIR/static-items-cant-move.rs:18:10
   |
LL |     test(BAR);
   |          ^^^ move occurs because `BAR` has type `Foo`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
